# Huffman-Tree-Encoder

./: .gitignore  CMakeLists.txt  FrequencyElement.cpp  FrequencyElement.h  FrequencyTable.cpp  FrequencyTable.h  HuffmanTree.cpp  HuffmanTree.h  README.md  freq-table0.txt  freq-table1.txt  freq-table2.txt  freq-table3.txt  huffman  huffmanlab  main.cpp  my.table  test-file-0.txt  test-file-2n.table  test-file-3n.table
outputs/: test-file-0n.table  test-file-1n.table
